raps-kernel/src/snapshots/raps_kernel__error__tests__format_error_no_suggestions.snap
---
source: raps-kernel/src/error.rs
assertion_line: 651
expression: formatted
---

Error: Bad request
  Code: BadRequest (HTTP 400)
  Details: Invalid input
