raps-kernel/src/snapshots/raps_kernel__error__tests__format_error_same_explanation_and_message.snap
---
source: raps-kernel/src/error.rs
assertion_line: 664
expression: formatted
---

Error: Same message
  Code: BadRequest (HTTP 400)
  Details: Same message
