raps-kernel/src/snapshots/raps_kernel__error__tests__format_error_with_empty_message.snap
---
source: raps-kernel/src/error.rs
assertion_line: 622
expression: formatted
---

Error: Bad request
  Code: BadRequest (HTTP 400)
