raps-kernel/src/snapshots/raps_kernel__error__tests__format_interpreted_error_no_colors.snap
---
source: raps-kernel/src/error.rs
assertion_line: 444
expression: formatted
---

Error: Authentication failed
  Code: Unauthorized (HTTP 401)
  Details: Token expired

Suggestions:
  - Run 'raps auth login'
