raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_400_plain_text.snap
---
source: raps-kernel/src/error.rs
assertion_line: 724
expression: formatted
---

Error: Request failed (HTTP 400): Bad request: invalid parameter
  Code: BadRequest (HTTP 400)
  Details: Bad request: invalid parameter

Suggestions:
  - Check the error details
