raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_403_bucket_suggestion.snap
---
source: raps-kernel/src/error.rs
assertion_line: 696
expression: formatted
---

Error: Permission denied. Your token lacks required scopes.
  Code: forbidden (HTTP 403)
  Details: Missing bucket:create scope

Suggestions:
  - Check that your app has the required scopes enabled in APS Portal
  - Run 'raps auth login' with the necessary scopes
  - Add 'bucket:read'/'bucket:create' scopes for OSS
