raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_403_scope_suggestion.snap
---
source: raps-kernel/src/error.rs
assertion_line: 686
expression: formatted
---

Error: Permission denied. Your token lacks required scopes.
  Code: insufficient_scope (HTTP 403)
  Details: Missing data:read scope

Suggestions:
  - Check that your app has the required scopes enabled in APS Portal
  - Run 'raps auth login' with the necessary scopes
  - Add 'data:read'/'data:write' scopes for Data Management
