raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_404_error.snap
---
source: raps-kernel/src/error.rs
assertion_line: 703
expression: formatted
---

Error: Resource not found.
  Code: NotFound (HTTP 404)
  Details: Bucket not found

Suggestions:
  - Verify the resource ID is correct
  - Check that the resource exists
  - Ensure you have access to the resource
