raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_429_error.snap
---
source: raps-kernel/src/error.rs
assertion_line: 710
expression: formatted
---

Error: Rate limit exceeded.
  Code: TooManyRequests (HTTP 429)
  Details: Rate limit exceeded

Suggestions:
  - Wait and retry the request
  - Reduce request frequency
