raps-kernel/src/snapshots/raps_kernel__error__tests__snapshot_500_error.snap
---
source: raps-kernel/src/error.rs
assertion_line: 717
expression: formatted
---

Error: APS server error (temporary).
  Code: InternalServerError (HTTP 500)
  Details: Internal server error

Suggestions:
  - Wait and retry
  - Check APS status page
